# LocalFileAgent

./: .gitignore  CLAUDE.md  LocalfileAgent.py  README.md  gui.py  pyproject.toml  rag.py  requirements.txt  session_manager.py
.claude/: settings.local.json
docs/superpowers/plans/: 2026-05-25-rag-retrieval.md
docs/superpowers/specs/: 2026-05-24-unified-workspace-design.md  2026-05-25-rag-retrieval-design.md  2026-05-26-general-assistant-chat-design.md
tests/: test_busy_indicator.py  test_cli_entry.py  test_concurrency_guard.py  test_embed.py  test_general_chat.py  test_no_files_chat.py  test_rag.py  test_resumed_session.py  test_run_chat.py  test_run_summarise.py  test_session_autosave.py  test_session_loading.py  test_session_manager.py  test_stream.py  test_streaming_render.py  test_streaming_worker.py  test_utf8_output.py  test_widgets.py
